# subout

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: release.yml
resources/: schema_ui_meta.json  schemas.json
src/: fetcher.rs  generator.rs  lib.rs  main.rs
src/db/: mod.rs  models.rs
src/parser/: mod.rs  types.rs  utils.rs
src/web/: auth.rs  config.rs  groups.rs  mod.rs  nodes.rs  settings.rs  subscriptions.rs  system.rs
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.js
web/coverage/: clover.xml  coverage-final.json  groupImport.js.html  index.html
web/src/: App.vue  main.js  store.js  style.css  validator.js
web/src/components/: ConfigEditorView.component.test.js  ConfigEditorView.vue  DashboardView.vue  DnsEditor.test.js  DnsEditor.vue  GroupsView.component.test.js  GroupsView.vue  HistoryView.vue  JsonTreeView.vue  LoginBackground.vue  NodesView.component.test.js  NodesView.vue  RouteEditor.test.js  RouteEditor.vue  RuleCriteriaTags.test.js  RuleCriteriaTags.vue  SettingsView.vue  SubscriptionsView.component.test.js  SubscriptionsView.vue
web/src/utils/: groupImport.js  groupImport.test.js
